# dad_dashboard

./: .gitignore  README.md  api_documentation.md  app.py  data_loader.py  database.db  metrics.py  plots.py  pyproject.toml  requirements.txt  testing.py
csv_data/: data_2025-04-04.csv
dashboard/: app.py  metrics.py  plots.py
dashboard/api/: main.py
dashboard/api/routes/: measurements.py  weather.py
dashboard/database/: db.py  fetch.py  models.py  transform.py
data/: data.csv
scripts/: ingest_csv.py
tests/: conftest.py  test_measurements.py  test_utils.py  test_weather.py
